[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rcs3"
authors = [{name='ppapadop', email='philip.papadopoulos@gmail.com'},
           {name = "santucci", email = "santucci@uci.edu"},
           {name = "lopez", email = "lopez@uci.edu"}
		  ]

dynamic = ["version", "description"]
